<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tryb_gry"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:translationX="10dp"
        android:translationY="25dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="200dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="290dp"
        android:translationY="-47dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationX="200dp"
        android:translationY="-110dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pojedynek"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:translationX="270dp"
        android:translationY="-133dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/score"
        android:textColor="@color/white"
        android:translationX="10dp"
        android:translationY="-50dp"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/box301"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:translationX="200dp"
        android:translationY="-90dp" />

    <CheckBox
        android:id="@+id/box501"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="285dp"
        android:translationY="-138dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_301"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationX="200dp"
        android:translationY="-200dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_501"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:translationX="280dp"
        android:translationY="-223dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_ilu"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:translationX="10dp"
        android:translationY="-150dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graj"
        android:translationX="150dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:translationY="-190dp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>