<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="116dp"
        android:text="@string/cel"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jdc_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="70sp"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/jdc_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="38dp" />

    <Button
        android:id="@+id/jdc_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/jdc_double"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="double"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="353dp" />

    <Button
        android:id="@+id/jdc_triple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripple"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="413dp" />

    <TextView
        android:id="@+id/jdc_licznik1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/jdc_licznik2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="364dp" />

    <TextView
        android:id="@+id/jdc_licznik3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="426dp" />

    <Button
        android:id="@+id/jdc_miss"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/miss"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="487dp" />

    <TextView
        android:id="@+id/jdc_licznik4"
        android:layout_width="17dp"
        android:layout_height="27dp"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="487dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:text="@string/double_time"
        android:textColor="#EF5050"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/jdc_hit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="421"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="55dp" />

</androidx.constraintlayout.widget.ConstraintLayout>