<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="151dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="217dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/haslo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/has_o" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_data"
        android:layout_width="221dp"
        android:layout_height="91dp"
        android:text="@string/wy_ij_dane_do_bazy"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="314dp" />
</androidx.constraintlayout.widget.ConstraintLayout>